# optalcp-benchmarks

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  USAGE.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
benchmarks/: .gitignore
benchmarks/blocking-jobshop/: README.md  blocking-jobshop.mts  blocking-jobshop.py
benchmarks/cvrp/: README.md  cvrp.mts  cvrp.py
benchmarks/demo-external-solutions/: README.md  jobshop-heuristics.mts  jobshop-heuristics.py  jobshop-hybrid.mts  jobshop-hybrid.py  jobshop-talk.mts
benchmarks/distributed-flowshop/: README.md  distributed-flowshop.mts  distributed-flowshop.py
benchmarks/flexible-jobshop/: README.md  flexible-jobshop.mts  flexible-jobshop.py
benchmarks/flexible-jobshop-w/: README.md  flexible-jobshop-w.mts  flexible-jobshop-w.py
benchmarks/jobshop/: README.md  jobshop.mts  jobshop.py  modeler.mts
benchmarks/jobshop-operators/: README.md  jobshop-operators.mts  jobshop-operators.py
benchmarks/jobshop-tt/: README.md  data  jobshop-tt.mts  jobshop-tt.py
benchmarks/mmrcpsp/: README.md  mmrcpsp.mts  mmrcpsp.py
benchmarks/non-permutation-flowshop/: README.md  non-permutation-flowshop.mts  non-permutation-flowshop.py
benchmarks/openshop/: README.md  openshop.mts  openshop.py
benchmarks/permutation-flowshop/: README.md  data  permutation-flowshop.mts  (+1 more)
compare/: .gitignore  README.md  compare.mts  compare_all.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
solveCPOs/: .gitignore  README.md
utils/: parsetsp.mts  solveJSONs.mts  utils.mts
(+1555 files in other folders)
